# pyTMD-tutorial

./: .gitignore  CONTRIBUTORS.md  README.md  pyproject.toml
astro/: Plot-Earth-Orientation-Parameters.ipynb  Plot-Tidal-Spectra.ipynb
ocean_load/: Check-Tide-Map.ipynb  Compare-Tide-Gauges.ipynb  Plot-Ross-Ice-Shelf-Map.ipynb
simple/: SimpleScriptGetTideCurrentTimeseries.ipynb  SimpleScriptGetTideElevationTimeseries.ipynb  bar_BSO3_a_rcm7_2008_09.nc
